# cc

./: .gitignore  Cargo.toml
asm/: add_a_lot.s  not-5.s
src/: cli.rs  codegen.rs  lib.rs  loop_label.rs  main.rs  parse.rs  semantic.rs  structs.rs  tacky.rs  tokenize.rs
src/codegen/: error.rs  mod.rs  reg.rs
src/fuzzing/: display.rs  mod.rs
src/parse/: error.rs  mod.rs
src/preprocess/: mod.rs
src/semantic/: mod.rs
src/tacky/: error.rs  mod.rs  types.rs
src/tokenize/: error.rs  mod.rs
test-files/: add.c  add_a_lot.c  addr.c  array.c  array_index.c  assignment.c  bitwise.c  block_shadow.c  char.c  char_div.c  char_to_double.c  char_to_int.c  char_to_uchar.c  cmp.c  compound_assign.c  decr.c  do_while.c  double_arith.c  double_casts.c  dynamic_struct.c  extern_usage.c  for_loop.c  forward_decl.c  function_call.c  hello_world.c  if.c  include.c  incr.c  index_utf_8.c  int.c  large_int.c  large_struct.c  multiple_type_decls.c  paren_ret.c  pointer_add.c  pointer_chain.c  pointer_eq.c  pointer_store.c  pointer_sub.c  print-long.c  (+15 more)
test-files/includes/: add.h  div.h  mul.h  sub.h
tests/: cli.rs  decr.c  fuzz.rs  mul.c  notnot.c
tests/snapshots/: cli__add_a_lot.snap  cli__array.snap  cli__assignment.snap  cli__block_shadow.snap  cli__char.snap  cli__char_to_double.snap  cli__char_to_uchar.snap  cli__cmp.snap  cli__compound_assign.snap  cli__decr.snap  cli__double_casts.snap  cli__exit_code: add.snap  cli__exit_code: add_a_lot.snap  cli__exit_code: array.snap  cli__exit_code: array_index.snap  cli__exit_code: char.snap  cli__exit_code: cmp.snap  (+47 more)
(+4 files in other folders)
