[package]
name = "cc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "env"] }
logos = "0.15.1"
thiserror = "2.0.17"
quickcheck = "1.0.3"

[dev-dependencies]
datatest-stable = "0.3"
assert_cmd = "2.0.17"
insta = { version = "1.43.2", features = ["yaml", "glob"] }
insta-cmd = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
libtest-mimic = "0.8"
rand = "0.9.2"

[[test]]
name = "cli"
harness = false

[[test]]
name = "fuzz"
harness = false
